--- a/CMS/hellorest-server/.classpath
+++ b/CMS/hellorest-server/.classpath
@@ -24,5 +24,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="AuthClientNickNormDavid.jar"/>
+	<classpathentry kind="lib" path="AuthServerNickNormDavid.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
